<resources>
  <string name="app_name">Preço Certo</string>
  <string name="facebook_app_id">148645042238090</string>
  <string name="senha">Senha</string>
  <string name="usuario">E-mail</string>
  <string name="nome">Nome</string>
  <string name="senhaConfirm">Confirmar Senha</string>
  <string name="cadastro">cadastro</string>
  <string name="email">E-mail</string>
  <string name="action_logout">Logout</string>
</resources>
