<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@color/colorPrimary" >

        <EditText
            android:id="@+id/campoUsuario"
            android:background="@color/cardview_light_background"
            android:height="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:layout_weight ="30"       />
        <EditText
            android:id="@+id/campoSenha"
            android:layout_width="match_parent"
            android:height="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:layout_weight ="30"          />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"    />
    </LinearLayout>

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:autoLink="web"
        android:gravity="end"
        android:padding="20px"
        android:text="@string/cadastro"
        android:orientation="vertical"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>